# motionEstimationTP4ETI

./: CMakeLists.txt  C_blockMatching.cpp  C_blockMatching.h  C_imgMatrix.h  C_matrix.h  C_motionEstimation.cpp  C_motionEstimation.h  main.cpp  movie_train00000000.tif  movie_train00000001.tif
